Make sure that links in the main body are underlined because the contrast between those links and surrounding text is too low for some color-blind people.

--- a/css/screen.css
+++ b/css/screen.css
@@ -80,7 +80,7 @@ p {
 a {
   color: var(--accent-dark);
   background-color: var(--bg);
-  text-decoration: none;
+  /* text-decoration: none; */
   transition: color var(--transition);
 }
 
@@ -160,6 +160,7 @@ nav.navbar {
   border-radius: 8px;
   color: var(--nav-text);
   background-color: var(--nav-bg);
+  text-decoration: none;
   font-weight: 500;
   transition: background-color var(--transition), color var(--transition);
 }
@@ -274,6 +275,10 @@ footer .social-media-links li {
   box-shadow: var(--shadow);
   list-style: none;
   margin: 0;
+}
+
+.links-list a {
+  text-decoration: none; 
 }
 
 /* Sections */
